# lion19-registration

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  deploy.sh  pyproject.toml  pyrightconfig.json
init/: registration_app.service
init/skeleton/etc/: config.toml  gnu_cauldron_reg.uwsgi  registration_app.uwsgi
src/registration_app/: __init__.py  api.py  app.py  cli.py  config.py  main.py  routes.py  utils.py
src/registration_app/db/: connection.py  participant.py
src/registration_app/db/migrations/: 0000-initialize.sql  0001-has_paid.sql  0002-photo_consent.sql  0003-regular_export.sql
src/registration_app/email_templates/: receipt.txt  registration-confirmation-without-payment.txt  registration-confirmation.txt
src/registration_app/forms/: registration.py
src/registration_app/model/: participant.py
src/registration_app/service/: emailer.py  participant.py  payment.py
src/registration_app/static/css/: style.css
src/registration_app/static/js/: script.js
src/registration_app/static/liba/bootstrap/js/: popover1.js  twitter-bootstrap-hover-dropdown.js
src/registration_app/static/liba/fontello/css/: fontello.css
src/registration_app/static/liba/isotope/css/: style.css
src/registration_app/views/: base.jinja  home.html.jinja  payment_callback.html.jinja
src/regular_export/: README.md  query_for_complete.sql  query_for_daily.sql  regular-export.sh
src/regular_export/queries/: query_for_daily.sql
src/switch_to_late_registration/: README.md  script.sh
tests/service/: test_participant.py
(+22 files in other folders)
